# groep-ta-2020-2021-jens-lars-en-dries

./: .gitignore  CMakeLists.txt  README.md  main.cpp
Datastructures/: Action.cpp  Action.h  Agent.cpp  Agent.h  LA.cpp  LA.h  MDP.cpp  MDP.h  State.cpp  State.h
algorithms/: AbstractAgent.cpp  AbstractAgent.h  MCLearning.cpp  MCLearning.h  QLearning.cpp  QLearning.h
data/: LAParserTest.xml
datastructures/: Action.h  Agent.cpp  Agent.h  Environment.cpp  Environment.h  LA.cpp  LA.h  MDPState.cpp  MDPState.h  QLearning.cpp  QLearning.h  State.cpp  State.h
parser/: AbstractParser.cpp  AbstractParser.h  CMakeLists.txt  EnvironmentParser.cpp  EnvironmentParser.h  LAParser.cpp  LAParser.h
parser/tinyxml/: tinyxmlparser.cpp
procederual-generation/: CMakeLists.txt  LavaPools.cpp  LavaPools.h  RiverBezier.cpp  RiverBezier.h
random/: Random.cpp  Random.h
tests/: test.cpp  testUtils.cpp  testUtils.h
tests/testData/: deterministicEnvironmentSave.xml  nonDeterministicEnvironmentSave.xml  savedLA.xml  savedLearnedLA.xml
visualisatie/: CMakeLists.txt  mainwindow.cpp  mainwindow.h  newwindow.cpp  newwindow.h  newwindow.ui  trainagentwindow.cpp  trainagentwindow.h  trainagentwindow.ui  ui_newwindow.h  ui_trainagentwindow.h  world.cpp  world.h
